// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideDrawer renders guide slide when a guide is selected 1`] = `
<div>
  <div
    class="sc-dvQaRk iuiENh"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TBWPX fiJAaN"
    >
      <span
        class="sc-ZOtfp jppFYN"
        data-testid="guidesBackButton"
      >
        <i
          class="sc-bdvvtL kSEjuX"
        >
          <span
            class="SVGInline SVGInline--cleaned"
          >
            <svg
              class="SVGInline-svg SVGInline--cleaned-svg"
              style="width: 16px;height: 16px;"
            />
          </span>
        </i>
      </span>
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-bTfYFJ bpHA-Dr"
    />
    <div
      class="sc-jIkXHa dUPzoV"
      title="Title"
    >
      Title
    </div>
    <div
      class="sc-Galmp ivowtc disable-font-ligatures"
    >
      <div>
        <div>
          Test Slide
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view including Remote Guides list 1`] = `
<div>
  <div
    class="sc-dvQaRk iuiENh"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TBWPX fiJAaN"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-bTfYFJ bpHA-Dr"
    />
    <div
      class="sc-brSvTw bogpyh slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-AjmGg guIoaZ remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-gGPzkF bPrEBZ"
      >
        <div
          class="sc-efQSVx cziNtw"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-hZpJaK dsOSrf"
      >
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-gGPzkF bPrEBZ"
      >
        <div
          class="sc-efQSVx cziNtw"
          data-testid="remoteGuidesTitle"
        >
          Remote Guides
        </div>
      </div>
      <div
        class="sc-hZpJaK dsOSrf"
      >
        <li
          class="sc-hkgtus eoyLrk"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
            data-testid="remoteGuideidentifier"
          >
            Title
          </span>
          <span
            class="sc-jivBlf cDmpfO"
            data-testid="removeGuideidentifier"
          >
            <i
              class="sc-bdvvtL jIQruX sl-bin"
            />
          </span>
        </li>
      </div>
      <div
        class="sc-dkQkyq kjJVyU"
      >
        <a
          class="sc-cNKqjZ gsMctE"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GuideDrawer renders list view without Remote Guides 1`] = `
<div>
  <div
    class="sc-dvQaRk iuiENh"
    data-testid="guidesDrawer"
    id="guide-drawer"
  >
    <h4
      class="sc-TBWPX fiJAaN"
    >
      Neo4j Browser Guides
       
    </h4>
    <div
      class="sc-bTfYFJ bpHA-Dr"
    />
    <div
      class="sc-brSvTw bogpyh slide"
      style="padding: 0px 15px;"
    >
      You can also access Browser guides by running
      <span
        class="sc-AjmGg guIoaZ remove-play-icon"
        data-populate=":guide [guide name]"
      >
        :guide [guide name]
      </span>
      in the code editor.
      <div
        class="sc-gGPzkF bPrEBZ"
      >
        <div
          class="sc-efQSVx cziNtw"
        >
          Built-in guides
        </div>
      </div>
      <div
        class="sc-hZpJaK dsOSrf"
      >
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuideintro"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            intro
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Navigating Neo4j Browser
             
          </div>
        </li>
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuideconcepts"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            concepts
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Property graph model concepts
             
          </div>
        </li>
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuidecypher"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            cypher
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Cypher basics - create, match, delete
             
          </div>
        </li>
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuidemovie-graph"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            movie-graph
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Queries and recommendations with Cypher - movie use case}
             
          </div>
        </li>
        <li
          class="sc-JkixQ kibkeD"
          data-testid="builtInGuidenorthwind-graph"
        >
          <span
            class="sc-AjmGg guIoaZ remove-play-icon"
          >
            :guide 
            northwind-graph
          </span>
          <div
            class="sc-gGPzkF jYSqFX"
          >
             
            Translate and import relation data into graph
             
          </div>
        </li>
      </div>
      <div
        class="sc-dkQkyq kjJVyU"
      >
        <a
          class="sc-cNKqjZ gsMctE"
          href="https://neo4j.com/graphgists/"
          rel="noreferrer"
          target="_blank"
        >
          More guides
        </a>
      </div>
    </div>
  </div>
</div>
`;
